Navbar Collapse issue fixed

--- a/src/components/projects-timeline/projects-timeline.styles.css
+++ b/src/components/projects-timeline/projects-timeline.styles.css
@@ -31,8 +31,5 @@ div{
 }
 
 /* (B) GRID CELLS */
-.projects{
-  display: flex;
-  flex-wrap: wrap;
-}
+
 
